--- a/alexandria/activity-elements-activity/src/homePage.html
+++ b/alexandria/activity-elements-activity/src/homePage.html
@@ -36,7 +36,7 @@
         <dom-module id="page-body">
 
             <template>
-                <cotton-zombie display="desktopDisplay" widget="desktopWidget" title="$title"></cotton-zombie>
+                <cotton-zombie display="desktop" widget="desktopWidget" title="$title"></cotton-zombie>
             </template>
 
             <style>
