--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
@@ -15,7 +15,7 @@
 
         _createPanel : function(name) {
             var zombie = document.createElement("cotton-zombie");
-            zombie.setAttribute("display", "AlexandriaPanelDisplay");
+            zombie.setAttribute("display", "AlexandriaPanel");
             zombie.setAttribute("widget", "AlexandriaPanel");
             zombie.setAttribute("object", name);
             this.$.panel.innerHTML = "";
