--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel-catalog-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel-catalog-view.html
@@ -13,9 +13,9 @@
 <dom-module id="alexandria-panel-catalog-view">
 
     <template>
-        <cotton-zombie id="catalogZombie" display="AlexandriaCatalogDisplay" widget="AlexandriaCatalog"></cotton-zombie>
-        <cotton-zombie id="temporalRangeCatalogZombie" display="AlexandriaTemporalRangeCatalogDisplay" widget="AlexandriaTemporalRangeCatalog"></cotton-zombie>
-        <cotton-zombie id="temporalTimeCatalogZombie" display="AlexandriaTemporalTimeCatalogDisplay" widget="AlexandriaTemporalTimeCatalog"></cotton-zombie>
+        <cotton-zombie id="catalogZombie" display="AlexandriaCatalog" widget="AlexandriaCatalog"></cotton-zombie>
+        <cotton-zombie id="temporalRangeCatalogZombie" display="AlexandriaTemporalRangeCatalog" widget="AlexandriaTemporalRangeCatalog"></cotton-zombie>
+        <cotton-zombie id="temporalTimeCatalogZombie" display="AlexandriaTemporalTimeCatalog" widget="AlexandriaTemporalTimeCatalog"></cotton-zombie>
     </template>
 
     <style>
