--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel-custom-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel-custom-view.html
@@ -11,7 +11,7 @@
 <dom-module id="alexandria-panel-custom-view">
 
     <template>
-        <cotton-zombie display="AlexandriaItemDisplay" widget="AlexandriaItem"></cotton-zombie>
+        <cotton-zombie display="AlexandriaItem" widget="AlexandriaItem"></cotton-zombie>
     </template>
 
     <style>
