--- a/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
@@ -25,12 +25,12 @@
                                               on-grouping-selection-change="_handleGroupingChange"></alexandria-catalog-grouping-list>
             <div class="main flex">
                 <a class="clear" hidden$="[[!_filtered]]" on-tap="clearFilter">[[ClearFilterr]]</a>
-                <cotton-zombie display="AlexandriaCatalogViewListDisplay" widget="AlexandriaCatalogViewList"></cotton-zombie>
-                <cotton-zombie display="AlexandriaTimeNavigatorDisplay" widget="AlexandriaTimeNavigator"></cotton-zombie>
+                <cotton-zombie display="AlexandriaCatalogViewList" widget="AlexandriaCatalogViewList"></cotton-zombie>
+                <cotton-zombie display="AlexandriaTimeNavigator" widget="AlexandriaTimeNavigator"></cotton-zombie>
             </div>
         </div>
         <div id="panel" name="panel" class="layout vertical flex hidden" style="height:calc(100% - 60px);"></div>
-        <cotton-zombie display="AlexandriaDialogContainerDisplay" widget="AlexandriaDialogContainer"></cotton-zombie>
+        <cotton-zombie display="AlexandriaDialogContainer" widget="AlexandriaDialogContainer"></cotton-zombie>
         <paper-dialog id="groupingsDialog" no-overlap>
             <h2>[[ShowGroupings]]</h2>
             <alexandria-catalog-grouping-list hidden="[[_hideGroupings]]"
