--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-catalog.html
@@ -10,9 +10,9 @@
 
     <template>
         <div style$="height:100%;min-height:100px;overflow:auto;" class="layout flex">
-            <cotton-zombie id="entityZombie" display="AlexandriaCatalogDisplay" widget="AlexandriaCatalog" object="[[item]]"></cotton-zombie>
-            <cotton-zombie id="eventZombie" display="AlexandriaTemporalRangeCatalogDisplay" widget="AlexandriaTemporalRangeCatalog" object="[[item]]"></cotton-zombie>
-            <cotton-zombie id="reportZombie" display="AlexandriaTemporalTimeCatalogDisplay" widget="AlexandriaTemporalReportCatalog" object="[[item]]"></cotton-zombie>
+            <cotton-zombie id="entityZombie" display="AlexandriaCatalog" widget="AlexandriaCatalog" object="[[item]]"></cotton-zombie>
+            <cotton-zombie id="eventZombie" display="AlexandriaTemporalRangeCatalog" widget="AlexandriaTemporalRangeCatalog" object="[[item]]"></cotton-zombie>
+            <cotton-zombie id="reportZombie" display="AlexandriaTemporalTimeCatalog" widget="AlexandriaTemporalReportCatalog" object="[[item]]"></cotton-zombie>
         </div>
     </template>
 
