--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-display-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-display-view.html
@@ -47,7 +47,7 @@
 
             _displayType : function(type) {
                 var zombie = document.createElement("cotton-zombie");
-                zombie.setAttribute("display", type + "Display");
+                zombie.setAttribute("display", type);
                 zombie.setAttribute("widget", type);
                 this.$.container.appendChild(zombie);
             }
