--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-magazine-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-magazine-view.html
@@ -12,7 +12,7 @@
 <dom-module id="alexandria-catalog-magazine-view">
 
     <template>
-        <cotton-zombie display="AlexandriaItemDisplay" widget="AlexandriaItem"></cotton-zombie>
+        <cotton-zombie display="AlexandriaItem" widget="AlexandriaItem"></cotton-zombie>
     </template>
 
     <style>
