--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -88,7 +88,7 @@
                 </iron-list>
             </cotton-list>
         </div>
-        <alexandria-catalog-cluster-dialog clusters="[[clusters]]" entities="[[selectedItemList]]"></alexandria-catalog-cluster-dialog>
+        <alexandria-catalog-cluster-dialog clusters="[[clusters]]" items="[[selectedItemList]]"></alexandria-catalog-cluster-dialog>
     </template>
 
     <style>
