--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
@@ -112,7 +112,7 @@
                 </div>
             </template>
             <template is="dom-if" if="[[stamp.isEmbeddedCatalog]]">
-                <alexandria-mold-catalog style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]" catalog="[[stamp.properties.catalog]]" item$="[[item]][[stamp.name]]"></alexandria-mold-catalog>
+                <alexandria-mold-catalog style$="[[stamp.properties.defaultStyle]];[[stamp.properties.style]]" catalog$="[[stamp.properties.catalog]]" item$="[[item]][[stamp.name]]"></alexandria-mold-catalog>
             </template>
         </template>
     </template>
