--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel-custom-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel-custom-view.html
@@ -15,6 +15,10 @@
     </template>
 
     <style>
+        :host {
+            display: block;
+            padding-top: 10px;
+        }
     </style>
 
     <script>
