--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
@@ -104,7 +104,7 @@
             stamp.isExportOperation = this._isExportOperation(moldStamp);
             stamp.isTaskOperation = this._isTaskOperation(moldStamp);
             stamp.isPage = this._isPage(moldStamp);
-            stamp.isDisplay = this._isDisplay(moldStamp);
+            stamp.isEmbeddedDisplay = this._isEmbeddedDisplay(moldStamp);
             stamp.isLocation = this._isLocation(moldStamp);
             stamp.isBreadcrumbs = this._isBreadcrumbs(moldStamp);
             stamp.isItemLinks = this._isItemLinks(moldStamp);
@@ -126,6 +126,7 @@
             this._addStampItemLinksProperties(stamp, moldBlock, moldStamp);
             this._addStampCatalogLinkProperties(stamp, moldBlock, moldStamp);
             this._addStampLocationProperties(stamp, moldStamp);
+            this._addStampEmbeddedDisplayProperties(stamp, moldStamp);
             this._addStampEmbeddedCatalogProperties(stamp, moldStamp);
             stamp.properties.color = this._propertyValueOf(moldStamp,'color');
         },
@@ -181,6 +182,11 @@
         _addStampLocationProperties : function(stamp, moldStamp) {
             if (!stamp.isLocation) return;
             stamp.properties.icon = this._propertyValueOf(moldStamp,'icon');
+        },
+
+        _addStampEmbeddedDisplayProperties : function(stamp, moldStamp) {
+            if (!stamp.isEmbeddedDisplay) return;
+            stamp.properties.displayType = this._propertyValueOf(moldStamp,'displayType');
         },
 
         _addStampEmbeddedCatalogProperties : function(stamp, moldStamp) {
@@ -268,8 +274,8 @@
             return this.mode != "map" && stamp.shape === "page";
         },
 
-        _isDisplay : function(stamp) {
-            return this.mode != "map" && stamp.shape === "display";
+        _isEmbeddedDisplay : function(stamp) {
+            return this.mode != "map" && stamp.shape === "embedded-display";
         },
 
         _isLocation : function(stamp) {
