Block height is set to auto by default

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-behavior.html
@@ -73,7 +73,7 @@
         },
 
         _blockHeight : function (moldBlock) {
-            return moldBlock.height != -1 ? moldBlock.height + "%" : "100%";
+            return moldBlock.height != -1 ? moldBlock.height + "%" : "-1";
         },
 
         _stampOf : function(moldBlock, moldStamp) {
