--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
@@ -301,7 +301,7 @@
                     this.style.width = "100%";
                 if (this.block.width !== "100%")
                     this.style.width = this.block.width;
-                if (this.block.height !== "100%") {
+                if (this.block.height !== "-1") {
                     this.style.height = this.block.height;
                     if (this.block.layout.indexOf("horizontal") == -1)
                         this.style.display = "block";
