--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel-custom-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel-custom-view.html
@@ -18,6 +18,7 @@
         :host {
             display: block;
             padding-top: 10px;
+            height: calc(100% - 10px);
         }
     </style>
 
