--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
@@ -27,19 +27,53 @@
                     </template>
                 </paper-tabs>
             </div>
-            <iron-pages id="tabs-content" class="flex" selected="{{_selectedView}}">
-                <template is="dom-repeat" items="[[_viewList]]" as="view">
-                    <template is="dom-if" if="[[_isCustomView(view)]]">
-                        <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie>
+            <div class="layout horizontal">
+                <div class="left-justified">
+                    <template is="dom-repeat" items="[[_viewList]]" as="view">
+                        <template is="dom-if" if="[[_isLeftFixedLayoutView(view)">
+                            <template is="dom-if" if="[[_isLeftFixedCustomView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                            <template is="dom-if" if="[[_isLeftFixedCatalogView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                            <template is="dom-if" if="[[_isLeftFixedDisplayView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                        </template>
                     </template>
-                    <template is="dom-if" if="[[_isCatalogView(view)]]">
-                        <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                </div>
+                <iron-pages id="tabs-content" class="flex" selected="{{_selectedView}}">
+                    <template is="dom-if" if="[[_isMainLayoutView(view)">
+                        <template is="dom-repeat" items="[[_viewList]]" as="view">
+                            <template is="dom-if" if="[[_isCustomView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                            <template is="dom-if" if="[[_isCatalogView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                            <template is="dom-if" if="[[_isDisplayView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                        </template>
                     </template>
-                    <template is="dom-if" if="[[_isDisplayView(view)]]">
-                        <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                </iron-pages>
+                <div class="right-justified">
+                    <template is="dom-if" if="[[_isRightFixedLayoutView(view)">
+                        <template is="dom-repeat" items="[[_viewList]]" as="view">
+                            <template is="dom-if" if="[[_isCustomView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                            <template is="dom-if" if="[[_isCatalogView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                            <template is="dom-if" if="[[_isDisplayView(view)]]">
+                                <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            </template>
+                        </template>
                     </template>
-                </template>
-            </iron-pages>
+                </div>
+            </div>
         </div>
         <div id="panel" name="panel" class="layout vertical flex hidden" style="height:calc(100% - 60px);"></div>
         <cotton-zombie display="AlexandriaDialogContainer" widget="AlexandriaDialogContainer"></cotton-zombie>
@@ -50,16 +84,19 @@
             background: var(--default-primary-color);
             color: white;
             height: 30px;
+            @apply(--alexandria-panel-tabs);
         }
         :host paper-tab {
             -webkit-flex: none;
             flex: none;
             width: 100px;
             color: white;
+            @apply(--alexandria-panel-tab);
         }
         :host paper-tabs[no-bar] paper-tab.iron-selected {
             background: white;
             color: black;
+            @apply(--alexandria-panel-tab-selected);
         }
         :host #tabs-content {
             height: calc(100% - 30px);
@@ -161,6 +198,18 @@
 
             _isDisplayView : function(view) {
                 return view.referencePropertyList[0].value == "display-view";
+            },
+
+            _isLeftFixedLayoutView : function(view) {
+                return view.referencePropertyList[1].value == "left-fixed";
+            },
+
+            _isMainLayoutView : function(view) {
+                return view.referencePropertyList[1].value == "main";
+            },
+
+            _isRightFixedLayoutView : function(view) {
+                return view.referencePropertyList[1].value == "right-fixed";
             },
 
             _selectView : function(pos) {
